--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Github Repo</title>
+    <meta name="viewport" content="width=git push -u origin main, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     
