--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptate vel aliquam sunt. Corporis dolor, consectetur perferendis et sed fuga! Dicta aspernatur at aut nostrum debitis, illo ipsum labore quo.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur adipisci cumque nisi corporis fuga, consequatur rem at. Labore quasi rerum optio ipsa mollitia incidunt vitae, illo harum. Placeat, illum?</p>
     <p>A quick brown fox jumps over the lazy dog.</p>
-    <img src="toon.Jpg" alt="mycartoon">
+    <img src="toon.jpg" alt="mycartoon">
 </body>
 </html>
